subscribe and publish

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "material-ui": "^0.20.0",
     "materialize-css": "^0.100.2",
     "meteor-node-stubs": "^0.3.2",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
