--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.36",
+    "bcrypt": "^1.0.3",
+    "chart.js": "^2.7.2",
     "material-ui": "^0.20.0",
     "materialize-css": "^0.100.2",
     "meteor-node-stubs": "^0.3.2",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
+    "react-chartjs-2": "^2.7.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
